clients/include/rocblas_fortran.hpp

rocblas_status rocblas_scnrm2_strided_batched_fortran(rocblas_handle               handle,
                                                      rocblas_int                  n,
                                                      const rocblas_float_complex* x,
                                                      rocblas_int                  incx,
                                                      rocblas_stride               stridex,
                                                      rocblas_int                  batch_count,
                                                      float*                       results);
rocblas_status rocblas_dznrm2_strided_batched_fortran(rocblas_handle                handle,
                                                      rocblas_int                   n,
                                                      const rocblas_double_complex* x,
                                                      rocblas_int                   incx,
                                                      rocblas_stride                stridex,
                                                      rocblas_int                   batch_count,
                                                      double*                       results);
// amax
rocblas_status rocblas_isamax_fortran(
    rocblas_handle handle, rocblas_int n, const float* x, rocblas_int incx, rocblas_int* result);
rocblas_status rocblas_idamax_fortran(
    rocblas_handle handle, rocblas_int n, const double* x, rocblas_int incx, rocblas_int* result);
rocblas_status rocblas_icamax_fortran(rocblas_handle               handle,
                                      rocblas_int                  n,
                                      const rocblas_float_complex* x,
                                      rocblas_int                  incx,
                                      rocblas_int*                 result);
rocblas_status rocblas_izamax_fortran(rocblas_handle                handle,
                                      rocblas_int                   n,
                                      const rocblas_double_complex* x,
                                      rocblas_int                   incx,
                                      rocblas_int*                  result);
// amax_batched
rocblas_status rocblas_isamax_batched_fortran(rocblas_handle     handle,
                                              rocblas_int        n,
                                              const float* const x[],
                                              rocblas_int        incx,
                                              rocblas_int        batch_count,
                                              rocblas_int*       result);
rocblas_status rocblas_idamax_batched_fortran(rocblas_handle      handle,
                                              rocblas_int         n,
                                              const double* const x[],
                                              rocblas_int         incx,
                                              rocblas_int         batch_count,
                                              rocblas_int*        result);
rocblas_status rocblas_icamax_batched_fortran(rocblas_handle                     handle,
                                              rocblas_int                        n,
                                              const rocblas_float_complex* const x[],
                                              rocblas_int                        incx,
                                              rocblas_int                        batch_count,
                                              rocblas_int*                       result);
rocblas_status rocblas_izamax_batched_fortran(rocblas_handle                      handle,
                                              rocblas_int                         n,
                                              const rocblas_double_complex* const x[],
                                              rocblas_int                         incx,
                                              rocblas_int                         batch_count,
                                              rocblas_int*                        result);
// amax_strided_batched
rocblas_status rocblas_isamax_strided_batched_fortran(rocblas_handle handle,
                                                      rocblas_int    n,
                                                      const float*   x,
                                                      rocblas_int    incx,
                                                      rocblas_stride stridex,
                                                      rocblas_int    batch_count,
                                                      rocblas_int*   result);
rocblas_status rocblas_idamax_strided_batched_fortran(rocblas_handle handle,
                                                      rocblas_int    n,
                                                      const double*  x,
                                                      rocblas_int    incx,
                                                      rocblas_stride stridex,
                                                      rocblas_int    batch_count,
                                                      rocblas_int*   result);
rocblas_status rocblas_icamax_strided_batched_fortran(rocblas_handle               handle,
                                                      rocblas_int                  n,
                                                      const rocblas_float_complex* x,
                                                      rocblas_int                  incx,
                                                      rocblas_stride               stridex,
                                                      rocblas_int                  batch_count,
                                                      rocblas_int*                 result);
rocblas_status rocblas_izamax_strided_batched_fortran(rocblas_handle                handle,
                                                      rocblas_int                   n,
                                                      const rocblas_double_complex* x,
                                                      rocblas_int                   incx,
                                                      rocblas_stride                stridex,
                                                      rocblas_int                   batch_count,
                                                      rocblas_int*                  result);
// amin
rocblas_status rocblas_isamin_fortran(
    rocblas_handle handle, rocblas_int n, const float* x, rocblas_int incx, rocblas_int* result);
rocblas_status rocblas_idamin_fortran(
    rocblas_handle handle, rocblas_int n, const double* x, rocblas_int incx, rocblas_int* result);
rocblas_status rocblas_icamin_fortran(rocblas_handle               handle,
                                      rocblas_int                  n,
                                      const rocblas_float_complex* x,
                                      rocblas_int                  incx,
                                      rocblas_int*                 result);
rocblas_status rocblas_izamin_fortran(rocblas_handle                handle,
                                      rocblas_int                   n,
                                      const rocblas_double_complex* x,
                                      rocblas_int                   incx,
                                      rocblas_int*                  result);
// amin_batched
rocblas_status rocblas_isamin_batched_fortran(rocblas_handle     handle,
                                              rocblas_int        n,
                                              const float* const x[],
                                              rocblas_int        incx,
                                              rocblas_int        batch_count,
                                              rocblas_int*       result);